--- a/views/_reserva_online_data_form.erb
+++ b/views/_reserva_online_data_form.erb
@@ -2,27 +2,27 @@
 	          <legend id="lg_customer" class="legend-first-level"><%=t.new_booking.customer%></legend>
 	          <div class="formrow">
 	            <label id="label_customer_email" for="booking[customer_name]" class="fieldtitle"><%=t.new_booking.customer_name.label%> *</label>
-	            <input type="text" name="booking[customer_name]" id="booking[customer_name]" class="fieldcontrol" maxlength="40" placeholder="<%=t.new_booking.customer_name.placeholder%>"/>
+	            <input type="text" name="booking[customer_name]" id="booking[customer_name]" class="fieldcontrol" maxlength="40" placeholder="<%=t.new_booking.customer_name.placeholder%>" <%unless booking.nil?%>value="<%=booking.customer_name%>"<%end%>/>
 	          </div>
 	          <div class="formrow">
 	            <label id="label_customer_surname" for="booking[customer_surname]" class="fieldtitle"><%=t.new_booking.customer_surname.label%> *</label>
-	            <input type="text" name="booking[customer_surname]" id="booking[customer_surname]" class="fieldcontrol" maxlength="40" placeholder="<%=t.new_booking.customer_surname.placeholder%>"/>	          
+	            <input type="text" name="booking[customer_surname]" id="booking[customer_surname]" class="fieldcontrol" maxlength="40" placeholder="<%=t.new_booking.customer_surname.placeholder%>" <%unless booking.nil?%>value="<%=booking.customer_surname%>"<%end%>/>	          
 	          </div>
 	          <div class="formrow">
 	            <label id="label_customer_email" for="booking[customer_email]" class="fieldtitle"><%=t.new_booking.customer_email.label%> *</label>
-	            <input type="text" name="booking[customer_email]" id="booking[customer_email]" class="fieldcontrol" placeholder="<%=t.new_booking.customer_email.placeholder%>" maxlength="40"/>
+	            <input type="text" name="booking[customer_email]" id="booking[customer_email]" class="fieldcontrol" placeholder="<%=t.new_booking.customer_email.placeholder%>" maxlength="40" <%unless booking.nil?%>value="<%=booking.customer_email%>"<%end%>/>
 	          </div>
 	          <div class="formrow">
 	            <label id="label_customer_email_confirmation" for="booking[customer_email_confirmation]" class="fieldtitle"><%=t.new_booking.customer_email_confirmation.label%> *</label>
-	            <input type="text" name="booking[customer_email_confirmation]" id="booking[customer_email_confirmation]" class="fieldcontrol" placeholder="<%=t.new_booking.customer_email_confirmation.placeholder%>" maxlength="40"/>
+	            <input type="text" name="booking[customer_email_confirmation]" id="booking[customer_email_confirmation]" class="fieldcontrol" placeholder="<%=t.new_booking.customer_email_confirmation.placeholder%>" <%unless booking.nil?%>value="<%=booking.customer_email%>"<%end%> maxlength="40"/>
 	          </div>
 	          <div class="formrow">
 	            <label id="label_customer_phone" for="booking[customer_phone]" class="fieldtitle"><%=t.new_booking.customer_phone.label%> *</label>
-	            <input type="text" name="booking[customer_phone]" id="booking[customer_phone]" class="fieldcontrol" maxlength="15" placeholder="<%=t.new_booking.customer_phone.placeholder%>"/>      
+	            <input type="text" name="booking[customer_phone]" id="booking[customer_phone]" class="fieldcontrol" maxlength="15" placeholder="<%=t.new_booking.customer_phone.placeholder%>" <%unless booking.nil?%>value="<%=booking.customer_phone%>"<%end%>/>      
 	          </div>
 	          <div class="formrow">
 	            <label id="label_customer_mobile_phone" for="booking[customer_mobile_phone]" class="fieldtitle"><%=t.new_booking.customer_mobile.label%></label>
-	            <input type="text" name="booking[customer_mobile_phone]" id="booking[customer_mobile_phone]" class="fieldcontrol" maxlength="15" placeholder="<%=t.new_booking.customer_mobile.placeholder%>"/>      
+	            <input type="text" name="booking[customer_mobile_phone]" id="booking[customer_mobile_phone]" class="fieldcontrol" maxlength="15" placeholder="<%=t.new_booking.customer_mobile.placeholder%>" <%unless booking.nil?%>value="<%=booking.customer_mobile_phone%>"<%end%>/>      
 	          </div>
 	          <% if booking_item_family.driver and booking_item_family.driver_date_of_birth%>
 	          <div class="formrow bottom-space">
@@ -57,21 +57,22 @@
 	            <legend class="legend-second-level"><%=t.new_driving_booking.driver_personal_data%></legend>
 	            <div class="formrow">
 	              <label id="label_driver_name" for="booking[driver_name]" class="fieldtitle"><%=t.new_driving_booking.driver_name.label%></label>
-	              <input type="text" name="booking[driver_name]" id="booking[driver_name]" class="fieldcontrol" maxlength="40" placeholder="<%=booking_item_family.driver_literal == :driver ? t.new_driving_booking.driver_name.placeholder : t.new_booking.contact_name.placeholder%>"/>
+	              <input type="text" name="booking[driver_name]" id="booking[driver_name]" class="fieldcontrol" maxlength="40" placeholder="<%=booking_item_family.driver_literal == :driver ? t.new_driving_booking.driver_name.placeholder : t.new_booking.contact_name.placeholder%>" <%unless booking.nil?%>value="<%=booking.driver_name%>"<%end%>/>
 	            </div>
 	            <div class="formrow">
 	              <label id="label_driver_surname" for="booking[driver_surname]" class="fieldtitle"><%=t.new_driving_booking.driver_surname.label%></label>
-	              <input type="text" name="booking[driver_surname]" id="booking[driver_surname]" class="fieldcontrol" maxlength="40" placeholder="<%=booking_item_family.driver_literal == :driver ? t.new_driving_booking.driver_surname.placeholder : t.new_booking.contact_surname.placeholder%>"/>
+	              <input type="text" name="booking[driver_surname]" id="booking[driver_surname]" class="fieldcontrol" maxlength="40" placeholder="<%=booking_item_family.driver_literal == :driver ? t.new_driving_booking.driver_surname.placeholder : t.new_booking.contact_surname.placeholder%>"
+	              <%unless booking.nil?%>value="<%=booking.driver_surname%>"<%end%>/>
 	            </div>
 	            <div class="formrow">
 	              <label id="label_driver_document" for="booking[driver_document_id]" class="fieldtitle"><%=t.new_driving_booking.driver_nif.label%></label>
-	              <input type="text" name="booking[driver_document_id]" id="booking[driver_document_id]" class="fieldcontrol" maxlength="15" placeholder="<%=booking_item_family.driver_literal == :driver ? t.new_driving_booking.driver_nif.placeholder : t.new_booking.contact_nif.placeholder%>"/>
+	              <input type="text" name="booking[driver_document_id]" id="booking[driver_document_id]" class="fieldcontrol" maxlength="15" placeholder="<%=booking_item_family.driver_literal == :driver ? t.new_driving_booking.driver_nif.placeholder : t.new_booking.contact_nif.placeholder%>" <%unless booking.nil?%>value="<%=booking.driver_document_id%>"<%end%>/>
 	            </div>	        
 	            <% if booking_item_family.driver_license %>
                 <legend class="legend-second-level top-margin"><%=t.new_driving_booking.driver_license%></legend>
 	            <div class="formrow">
 	              <label id="label_driver_driving_license_number" for="booking[driver_driving_license_number]" class="fieldtitle"><%=t.new_driving_booking.driver_license_number.label%></label>
-	              <input type="text" name="booking[driver_driving_license_number]" id="booking[driver_driving_license_number]" class="fieldcontrol" maxlength="15" placeholder="<%=t.new_driving_booking.driver_license_number.placeholder%>"/>
+	              <input type="text" name="booking[driver_driving_license_number]" id="booking[driver_driving_license_number]" class="fieldcontrol" maxlength="15" placeholder="<%=t.new_driving_booking.driver_license_number.placeholder%>" <%unless booking.nil?%>value="<%=booking.driver_driving_license_number%>"<%end%>/>
 	            </div>
 	            <div class="formrow">
   	              <label id="label_driver_driving_license_date" for="booking[driver_driving_license_date]" class="fieldtitle"><%=t.new_driving_booking.driver_license_date.label%></label>
@@ -82,37 +83,37 @@
 	            </div>
 	            <div class="formrow">
 	              <label id="label_driver_driving_license_country" for="booking[driver_driving_license_country]" class="fieldtitle"><%=t.new_driving_booking.driver_license_country.label%></label>
-	              <input type="text" name="booking[driver_driving_license_country]" id="booking[driver_driving_license_country]" class="fieldcontrol" maxlength="50" placeholder="<%=t.new_driving_booking.driver_license_country.placeholder%>"/>
+	              <input type="text" name="booking[driver_driving_license_country]" id="booking[driver_driving_license_country]" class="fieldcontrol" maxlength="50" placeholder="<%=t.new_driving_booking.driver_license_country.placeholder%>" <%unless booking.nil?%>value="<%=booking.driver_driving_license_country%>"<%end%>/>
 	            </div>
 	            <% end %>
                 <legend class="legend-second-level top-margin"><%=t.new_driving_booking.driver_address%></legend>
 	            <div class="formrow">
 	              <label id="label_driver_address_street" for="booking[driver_address[street]]" class="fieldtitle"><%=t.new_driving_booking.driver_address_street.label%></label>
-	              <input type="text" name="booking[driver_address[street]]" id="booking[driver_address[street]]" class="fieldcontrol" maxlength="60" placeholder="<%=t.new_driving_booking.driver_address_street.placeholder%>"/>
+	              <input type="text" name="booking[driver_address[street]]" id="booking[driver_address[street]]" class="fieldcontrol" maxlength="60" placeholder="<%=t.new_driving_booking.driver_address_street.placeholder%>" <%if !booking.nil? and !booking.driver_address.nil?%>value="<%=booking.driver_address.street%>"<%end%>/>
 	            </div>
 	            <div class="formrow">
 	              <label id="label_driver_address_number" for="booking[driver_address[number]]" class="fieldtitle"><%=t.new_driving_booking.driver_address_number.label%></label>
-	              <input type="text" name="booking[driver_address[number]]" id="booking[driver_address[number]]" class="fieldcontrol" maxlength="10" placeholder="<%=t.new_driving_booking.driver_address_number.placeholder%>"/>
+	              <input type="text" name="booking[driver_address[number]]" id="booking[driver_address[number]]" class="fieldcontrol" maxlength="10" placeholder="<%=t.new_driving_booking.driver_address_number.placeholder%>" <%if !booking.nil? and !booking.driver_address.nil?%>value="<%=booking.driver_address.number%>"<%end%>/>
 	            </div>
 	            <div class="formrow">
 	              <label id="label_driver_address_complement" for="booking[driver_address[complement]]" class="fieldtitle"><%=t.new_driving_booking.driver_address_complement.label%></label>
-	              <input type="text" name="booking[driver_address[complement]]" id="booking[driver_address[complement]]" class="fieldcontrol" maxlength="20" placeholder="<%=t.new_driving_booking.driver_address_complement.placeholder%>"/>
+	              <input type="text" name="booking[driver_address[complement]]" id="booking[driver_address[complement]]" class="fieldcontrol" maxlength="20" placeholder="<%=t.new_driving_booking.driver_address_complement.placeholder%>" <%if !booking.nil? and !booking.driver_address.nil?%>value="<%=booking.driver_address.complement%>"<%end%>/>
 	            </div>
 	            <div class="formrow">
 	              <label id="label_driver_address_city" for="booking[driver_address[city]]" class="fieldtitle"><%=t.new_driving_booking.driver_address_city.label%></label>
-	              <input type="text" name="booking[driver_address[city]]" id="booking[driver_address[city]]" class="fieldcontrol" maxlength="60" placeholder="<%=t.new_driving_booking.driver_address_city.placeholder%>"/>      
+	              <input type="text" name="booking[driver_address[city]]" id="booking[driver_address[city]]" class="fieldcontrol" maxlength="60" placeholder="<%=t.new_driving_booking.driver_address_city.placeholder%>" <%if !booking.nil? and !booking.driver_address.nil?%>value="<%=booking.driver_address.city%>"<%end%>/>      
 	            </div>
 	            <div class="formrow">
 	              <label id="label_driver_address_state" for="booking[driver_address[state]]" class="fieldtitle"><%=t.new_driving_booking.driver_address_state.label%></label>
-	              <input type="text" name="booking[driver_address[state]]" id="booking[driver_address[state]]" class="fieldcontrol" maxlength="60" placeholder="<%=t.new_driving_booking.driver_address_state.placeholder%>"/>    
+	              <input type="text" name="booking[driver_address[state]]" id="booking[driver_address[state]]" class="fieldcontrol" maxlength="60" placeholder="<%=t.new_driving_booking.driver_address_state.placeholder%>" <%if !booking.nil? and !booking.driver_address.nil?%>value="<%=booking.driver_address.state%>"<%end%>/>    
 	            </div>
 	            <div class="formrow">
 	              <label id="label_driver_address_country" for="booking[driver_address[country]]" class="fieldtitle"><%=t.new_driving_booking.driver_address_country.label%></label>
-	              <input type="text" name="booking[driver_address[country]]" id="booking[driver_address[country]]" class="fieldcontrol" maxlength="50" placeholder="<%=t.new_driving_booking.driver_address_country.placeholder%>"/>      
+	              <input type="text" name="booking[driver_address[country]]" id="booking[driver_address[country]]" class="fieldcontrol" maxlength="50" placeholder="<%=t.new_driving_booking.driver_address_country.placeholder%>" <%if !booking.nil? and !booking.driver_address.nil?%>value="<%=booking.driver_address.country%>"<%end%>/>      
 	            </div>
 	            <div class="formrow">
 	              <label id="label_driver_address_zip" for="booking[driver_address[zip]]" class="fieldtitle"><%=t.new_driving_booking.driver_address_zip.label%></label>
-	              <input type="text" name="booking[driver_address[zip]]" id="booking[driver_address[zip]]" class="fieldcontrol" maxlength="10" placeholder="<%=t.new_driving_booking.driver_address_zip.label%>"/>         
+	              <input type="text" name="booking[driver_address[zip]]" id="booking[driver_address[zip]]" class="fieldcontrol" maxlength="10" placeholder="<%=t.new_driving_booking.driver_address_zip.label%>" <%if !booking.nil? and !booking.driver_address.nil?%>value="<%=booking.driver_address.zip%>"<%end%>/>         
 	            </div>
 	          </div>
 	        </fieldset>
