booking management refactoring + booking dashboard

--- a/views/_booking_management_customer.erb
+++ b/views/_booking_management_customer.erb
@@ -1,4 +1,4 @@
-          <form name="customer" class="all-space" style="border:1px solid #EEE">
+          <form name="customer" style="border:1px solid #EEE; padding-bottom: 1.45em">
             <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline; margin-left:5px"><%= t.booking_management.form.customer_title %></div>         
             <input type="hidden" name="id" value="<%%=entity.id%>"/>
             <div class="element_template">
