--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -371,7 +371,7 @@
           </tr>                 
           <%% } %>          
           <tr>
-            <td class="total_column first_column"><%=t.new_booking.total.upcase%></td>
+            <td class="total_column first_column"><%=t.new_booking.total%></td>
             <td class="quantity_column"></td>
             <td class="quantity_column"></td>
             <td class="quantity_column"></td>
