--- a/views/reserva-online.js.erb
+++ b/views/reserva-online.js.erb
@@ -1384,10 +1384,10 @@
               'required': '<%=t.new_driving_booking.driver_date_of_birth.required%>'  
             },        
             'booking[pickup_place]': {
-              'required': '<%=t.new_booking.pickup_place.required%>'  
+              'required': '<%=t.new_booking.pickup_place_required%>'  
             },
             'booking[return_place]': {
-              'required': '<%=t.new_booking.return.required%>'  
+              'required': '<%=t.new_booking.return_place_required%>'  
             },
             <% if booking_item_family.height_mandatory %>
             'booking[customer_height]' : '<%=t.new_booking.height.required%>',
